# financial-rag-system

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_financial_profiles.py
app/: app.py  main.py
data/processed/: sample_rag_documents.json
docs/: architecture.md  setup_guide.md
src/api/: routes.py  server.py
src/data/: __init__.py
src/data/collectors/: __init__.py  abs_collector.py  asx_collector.py  document_loader.py  metals_collector.py  news_collector.py
src/data/database/: chroma_manager.py  vector_store.py
src/data/processors/: __init__.py  csv_processor.py  document_processor.py  tabular_processor.py  text_processor.py
src/evaluation/: __init__.py  benchmark.py  metrics.py  test_rag.py
src/models/: app.py  embeddings.py  financial_calculator.py  llm.py  rag_system.py
src/utils/: __init__.py  config.py  helpers.py  logger.py
tests/: __init__.py  test_api.py  test_data.py  test_models.py
